docs: record latest query search evidence